package com.quintor.worqplace.presentation.dto.workplace;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class WorkplaceDTO {
	private Long id;
	private int floor;
}
