@startuml
title Domain Class Diagram

note as note1 #white
All classes do have an Id
generated by Spring
end note

'settings
skinparam class {
classAttributeIconSize 0
ArrowColor black
BorderColor black
BackgroundColor white
}

skinparam shadowing false
skinparam stereotypeCBackgroundColor LightBlue
skinparam nodesep 50
skinparam noteBorderColor black

'classes
class Address {
- houseNumber
- addition
- street
- postalcode
- city
}

class Location {
- name
}

class Room {
- floor
}

class Workplace {
}

class Reservation {
- date
- starTime
- endTime
}

class Employee {
- firstName
- lastName
}

'Relations
Address "1" -down- Location
Location -right- "1..*" Room
Room "1" -right- Workplace
Room "0..1" -- Reservation
Workplace "0..1" -- Reservation
Reservation -- "1" Employee

@enduml
